[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Tile.gd" type="Script" id=1]
[ext_resource path="res://Materials/SpatialMaterial.tres" type="Material" id=2]
[ext_resource path="res://Assets/Tiles/floor.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tiles/ceiling.png" type="Texture" id=4]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 3 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, 0.5, -0.5, 0 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 4 )

[node name="Tile" type="Spatial"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -0.5, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 2 )

[node name="Ceiling" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.5, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Ceiling"]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Ceiling"]
shape = SubResource( 2 )

[node name="NorthWall" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )

[node name="MeshInstance" type="MeshInstance" parent="NorthWall"]
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="NorthWall"]
shape = SubResource( 2 )

[node name="SouthWall" type="StaticBody" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0.5 )

[node name="MeshInstance" type="MeshInstance" parent="SouthWall"]
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="SouthWall"]
shape = SubResource( 2 )

[node name="EastWall" type="StaticBody" parent="."]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0.5, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="EastWall"]
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="EastWall"]
shape = SubResource( 2 )

[node name="WestWall" type="StaticBody" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.5, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="WestWall"]
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="WestWall"]
shape = SubResource( 2 )
